added 404 specs and games specs

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -20,4 +20,8 @@ RSpec/ExampleLength:
 RSpec/MultipleExpectations:
   Max: 10
 
+RSpec/MultipleMemoizedHelpers:
+  Max: 10
 
+RSpec/NestedGroups:
+  Max: 5
